@@ -15,6 +15,7 @@ package cuts.java.jbi.deployment;
 import cuts.java.jbi.client.*;
 import org.apache.log4j.Logger;
 import java.util.*;
+import java.io.*;
 
 /**
  * @class NodeApplicationImpl
@@ -25,7 +26,7 @@ public class NodeApplicationImpl
   extends NodeApplicationPOA
 {
   /// The ORB for this node application.
-  org.omg.CORBA.ORB orb_ = null;
+  private org.omg.CORBA.ORB orb_ = null;
 
   /// The location of the configuration. This can be a relative
   /// location, or an absolute location. In the case of an absolute
@@ -35,7 +36,41 @@ public class NodeApplicationImpl
   private final Logger logger_ =
     Logger.getLogger(NodeApplicationImpl.class);
 
-  private NodeApplicationCallbackImpl callback_ = null;
+  private ApplicationProcessManagerImpl processManagerImpl_ = null;
+
+  private final String pathSeparator = System.getProperty("path.separator");
+
+  private final String fileSeparator = System.getProperty("file.separator");
+
+  private final String cutsLibDir =
+    System.getenv("CUTS_ROOT") + fileSeparator + "lib" + fileSeparator;
+  
+  private final String cutsContribDir =
+    System.getenv("CUTS_ROOT") + fileSeparator + "contrib" + 
+    fileSeparator + "java" + fileSeparator;
+
+  private final String jbiLibDir =
+    System.getenv("JBI_ROOT") + fileSeparator + 
+    "lib" + fileSeparator;
+
+  private final String jbiClassPath_ =
+    jbiLibDir + "capi1.5.jar" + pathSeparator +
+    jbiLibDir + "dom4j-1.6.1.jar" + pathSeparator +
+    jbiLibDir + "jaxen-1.1.1.jar" + pathSeparator +
+    jbiLibDir + "jbossall-client.jar" + pathSeparator +
+    jbiLibDir + "xpp3_xpath-1.1.4c.jar" + pathSeparator +
+    jbiLibDir + "xpp3-1.1.4c.jar";
+
+  private final String cutsClassPath_ =
+    cutsLibDir + "cuts.java.jar" + pathSeparator +
+    cutsLibDir + "cuts.java.jbi.jar" + pathSeparator +
+    cutsLibDir + "cuts.java.jbi.deployment.jar" + pathSeparator +
+    cutsContribDir + "jacorb.jar" + pathSeparator +
+    cutsContribDir + "spring.jar" + pathSeparator +
+    cutsContribDir + "log4j-1.2.15.jar" + pathSeparator +
+    cutsContribDir + "commons-logging-1.1.1.jar" + pathSeparator +
+    cutsContribDir + "castor-1.2.jar";
+
 
   /**
    * Initializing constructor.
@@ -49,26 +84,95 @@ public class NodeApplicationImpl
     
     // Create a callback object and activate it. This is what we will
     // pass to each of the spawn application processes.
-    this.callback_ = new NodeApplicationCallbackImpl();
-    this.callback_._this(this.orb_);
+    this.processManagerImpl_ = new ApplicationProcessManagerImpl();
+    this.processManagerImpl_._this(this.orb_);
   }
 
   public void finishLaunch()
   {
     // Do nothing!!
   }
-
+  
+  /**
+   * Start the node application. This will activate all the clients
+   * in each of the process.
+   */
   public void start()
   {
     // Start each of the application processes that we spawned.
   }
 
+  /**
+   * Install a new instance into the specified process group.
+   */
   public void installInstance(String groupName, String instanceName)
   {
-    // Locate the process group. If it does not exist, then we need to 
-    // spawn a new process.
+    // Get the application process for the group.
+    this.logger_.debug("installing client [" + instanceName +
+                       "] in process [" + groupName + "]");
+
+    ApplicationProcess appProcess = 
+      this.processManagerImpl_.getProcess(groupName);
+
+    if (appProcess == null)
+    {
+      try
+      {
+        // Get the CLASSPATH. We need to pass this along to 
+        // the application process.
+        String classPath = System.getProperty ("java.class.path");
+        String javaOpts = System.getenv("JAVA_OPTS");
+
+        // Convert the ApplicationProcessManager to a string.
+        String processManagerIOR =
+          this.orb_.object_to_string(this.processManagerImpl_._this());
+
+        // Construct the command for spawning a new application process.
+        String spawnCommand =
+          "java -cp " + classPath + pathSeparator + 
+          this.jbiClassPath_ + pathSeparator + this.cutsClassPath_ +
+          " -Djava.endorsed.dirs=" + 
+          this.cutsLibDir + this.pathSeparator + this.cutsContribDir +
+          " " + javaOpts + 
+          " -Dorg.omg.CORBA.ORBClass=org.jacorb.orb.ORB" +
+          " -Dorg.omg.CORBA.ORBSingletonClass=org.jacorb.orb.ORBSingleton" +
+          " cuts.java.jbi.deployment.JbiClientApp -name " + groupName +
+          " -ORBInitRef ProcessManager=" + processManagerIOR;
+
+        // Spawn a new application process.
+        this.logger_.debug("spawning a new application process [" + 
+                           spawnCommand + "]");
+
+        Process process = Runtime.getRuntime().exec(spawnCommand);
+
+        if (process != null)
+        {
+          // Wait for the process to register itself.
+          this.logger_.debug("waiting for application process to register itself");
+          this.processManagerImpl_.waitForProcessRegistered();
+
+          // Store the process with the manager.
+          this.logger_.debug("application process " + groupName +
+                             " successfully registerd itself");
+          this.processManagerImpl_.setProcess(groupName, process);
+
+          // Get the process from the process manager.
+          appProcess = this.processManagerImpl_.getProcess(groupName);
+        }
+        else
+        {
+          this.logger_.error("failed to spawn process " + groupName);
+        }
+      }
+      catch (Exception e)
+      {
+
+      }
+    }
 
     // Install the instance into the process group.
+    if (appProcess != null)
+      appProcess.installClient(instanceName);
   }
 
   /**
